<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_FlywheelMassStorageDefaultParameters" Id="{26e15710-68bf-4b6a-8182-be8444294207}">
    <Declaration><![CDATA[TYPE ST_FlywheelMassStorageDefaultParameters :
STRUCT
	aSetPointLimitsRelativeSpeed : ARRAY[1..2] OF REAL := [0,100];
	aSetPointLimitsTemperatureDifference : ARRAY[1..2] OF REAL := [3,5];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>